--- a/assignment-2.css
+++ b/assignment-2.css
@@ -141,11 +141,9 @@ body{
 
 .no-download-section{
     margin:50px 100px;
-    position:relative;
 }
 .no-download-div{
     width:100%;
-    position:absolute;
     display: flex;
 }
 .no-download-text-div{
@@ -153,27 +151,54 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding:150px 100px;
+    padding:150px 80px;
     align-items: center;
-    width:50%;
+    width:60%;
 }
 .no-download-image-div{
     position: relative;
-    width:50%;
+}
+.no-download-image{
+    margin-left:80px;
 }
 
-.no-download-image-div .no-download-image{
+.no-download-image img{
     width:100%;
-    padding:0px 0px 100px 100px;
+}
+.no-download-short-image{
+    width:200px;
     position:absolute;
-    z-index: 1;
+    margin-top:-150px;
 }
-.no-download-div .short-image{
-    width:50%;
-    position: absolute;
-    margin:40% 0px 0px 0px;
-    z-index: 2;
+/* end no download section */
+/* .image-btn-section{
+    padding:100px;
+    display: flex;
+    justify-content: center;
+    gap: 20px 5px;
+    flex-wrap: wrap;
 }
+.image-btn{
+    padding:10px 20px 10px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 30px;
+    border: none;
+    background-color: white;
+    cursor: pointer;
+}
+.image-btn:hover{
+    color:#FF42A5;
+    background-color: white;
+    border:1px solid #FF42A5; 
+}
+.image-btn-div{
+    padding:0px 5px 0px 0px;
+}
+.image-btn-div img{
+    width:30px;
+} */
 
 
 @media screen and (max-width:576px) {
@@ -219,7 +244,6 @@ body{
     }
     /* end online gamer */
     .no-download-section{
-        position:relative;
         margin:0px auto;
     }
     .no-download-div{
@@ -233,21 +257,24 @@ body{
         text-align: center;
         padding-bottom:0px;
     }
-
     .no-download-image-div{
         position: relative;
-        width:90%;
+        margin:50px;
     }
-    
-    .no-download-image-div .no-download-image{
-        width:100%;
-        padding:80px;
+    .no-download-short-image{
+        width:200px;
+        position:absolute;
+        margin-top:-150px;
     }
-    .no-download-div .short-image{
-        width:50%;
-        padding:20px 10px;
+    /* end no download section */
+
+    /* .image-btn-section{
+        padding:100px 40px;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 20px 5px;
     }
-    
+     */
 }
 @media screen and (min-width:577px) and (max-width:992px) {
     .play-like-section{
@@ -301,17 +328,45 @@ body{
         text-align: center;
     }
 
+    .no-download-section{
+        margin:0px auto;
+    }
+    .no-download-div{
+       flex-direction: column-reverse;
+       align-items: center;
+    }
+    .no-download-text-div{
+        display: flex;
+        flex-direction: column;
+        width:90%;
+        text-align: center;
+        margin-top:150px;
+    }
     .no-download-image-div{
         position: relative;
-        width:90%;
-    }
-    
-    .no-download-image-div .no-download-image{
+        padding:20px 100px;
         width:100%;
-        padding:80px;
     }
-    .no-download-div .short-image{
-        width:50%;
-        padding:20px 10px;
+    .no-download-image{
+        width:100%;
+        margin:0px 50px;
     }
+    .no-download-image img{
+        width:100%;
+        height:50vh;
+    }
+    .no-download-short-image{
+        width:40%;
+        position:absolute;
+        margin-top:-150px;
+    }
+    /* end no download section */
+    
+    .image-btn-section{
+        padding:100px 40px;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 20px 5px;
+    }
+    /* end  */
 }
