--- a/assignment-2.css
+++ b/assignment-2.css
@@ -66,7 +66,7 @@ body{
 .goat-h1{
     font-size:50px;
     font-weight: bold;
-    color:#b36fde;
+    color:#FF42A5;
 
 }
 .play-text-div ul li{
@@ -132,11 +132,36 @@ body{
     flex-direction: column;
     width:100%;
     text-align: left;
+    position:relative;
 }
-.online-image img{
+.online-icon{
+    position:absolute;
+    margin:-150px 0px 0px 50px;
+    text-align: center;
+    font-size:20px;
+    color:white;
+    display: none;
+}
+.online-image-p{
+    color: #FF42A5;
+    padding-top:20px;
+    font-weight:bold;
+}
+
+ .online-image img{
     width:100%;
     padding-bottom:20px;
+} 
+.online-pic{
+    cursor: pointer;
 }
+.online-pic:hover{
+    filter: blur(5px);
+    
+ }
+ .online-pic:hover ~ .online-icon{
+    display: block;
+ }
 /* end online gamer section */
 
 .no-download-section{
@@ -171,22 +196,23 @@ body{
     margin-top:-150px;
 }
 /* end no download section */
-/* .image-btn-section{
-    padding:100px;
+.image-btn-section{
     display: flex;
-    justify-content: center;
-    gap: 20px 5px;
     flex-wrap: wrap;
+    justify-content: center;
+    padding:50px 90px;
+    row-gap: 30px;
+    column-gap: 10px;
 }
 .image-btn{
     padding:10px 20px 10px 0px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     border-radius: 30px;
-    border: none;
     background-color: white;
     cursor: pointer;
+    border:1px solid transparent;
 }
 .image-btn:hover{
     color:#FF42A5;
@@ -198,7 +224,37 @@ body{
 }
 .image-btn-div img{
     width:30px;
-} */
+}
+.footer{
+    background-color:black;
+    padding:100px;
+    color:white;
+    text-align: center;
+}
+.footer-logo{
+    display: flex;
+    justify-content: center;
+}
+.our-story-div {
+    display: flex;
+    justify-content: space-evenly;
+    padding:30px 0px;
+}
+.footer-icon{
+    color:white;
+    display: flex;
+    font-size:30px;
+    justify-content: center;
+}
+.footer-icon i{
+    padding:20px 30px;
+}
+.footer-about-div{
+    display: flex;
+    justify-content: space-evenly;
+    padding:20px 0px;
+    color: gray;
+}
 
 
 @media screen and (max-width:576px) {
@@ -268,13 +324,27 @@ body{
     }
     /* end no download section */
 
-    /* .image-btn-section{
-        padding:100px 40px;
+    .image-btn-section{
+        padding:100px 100px;
         display: grid;
         grid-template-columns: repeat(3,1fr);
-        gap: 20px 5px;
+        grid-template-rows: repeat(3,1fr);
     }
-     */
+    /* star footer section */
+   
+    .our-story-div {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        row-gap: 20px;
+    }
+    .footer-icon{
+        color:white;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        font-size:30px;
+        justify-content: center;
+    }
+    
 }
 @media screen and (min-width:577px) and (max-width:992px) {
     .play-like-section{
@@ -363,10 +433,10 @@ body{
     /* end no download section */
     
     .image-btn-section{
-        padding:100px 40px;
+        padding:100px 100px;
         display: grid;
         grid-template-columns: repeat(3,1fr);
-        gap: 20px 5px;
+        grid-template-rows: repeat(3,1fr);
     }
     /* end  */
 }
